# translator

lexer/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe  cmake_install.cmake  main  start.sh
lexer/src/: main.cpp  translateFile.cpp  translateFile2.cpp  translateFile2cpp.py  translateFilecpp.py
